k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-k8s
  labels:
    name: multi-k8s
    environment: production
